# xsane

./: .gitignore  BACKENDS.XSANE  CHANGES.XSANE  ICM.TODO  IMAGE.XSANE  INSTALL.XSANE  Makefile.in  ONLINEHELP.XSANE  PROBLEMS  README-PATCH  TODO.XSANE  configure.in  cpxsane  print-libs  xsane-0.14.lsm  xsane-0.15.lsm  xsane-0.16.lsm  xsane-0.17.lsm  xsane-0.18.lsm  xsane-0.19.lsm  xsane-0.20.lsm  xsane-0.21.lsm  xsane-0.22.lsm  xsane-0.23.lsm  xsane-0.24.lsm  xsane-0.25.lsm  xsane-0.26.lsm  xsane-0.27.lsm  xsane-0.28.lsm  xsane-0.29.lsm  xsane-0.30.lsm  xsane-0.31.lsm  xsane-0.32.lsm  xsane-0.33.lsm  xsane-0.34.lsm  xsane-0.35.lsm  xsane-0.36.lsm  xsane-0.37.lsm  xsane-0.38.lsm  xsane-0.39.lsm  (+60 more)
backend-po/: README  README.ADD_NEW_LANGUAGE  README.INSTALL  README.UPDATE_LANGUAGE  de.po.in  make_newbackend.po.in  newbackend.po  newbackend.po.in  newbackend.po.in.in  po.in2po  remake_backend.po.in  umax.de.po  umax.de.po.in  umax.ja.po  umax.po  umax1220u.sr.po
backend-po/de/: sane-umax.mo
doc/: +  Makefile.in  brightness.ppm  contrast.ppm  gamma.ppm  sane-backends-doc.html  sane-pnm-doc.html  sane-pnm16-doc.html  sane-problems-doc.html  sane-scantips-doc.html  sane-xsane-advanced-doc.html  sane-xsane-batch-scan-doc.html  sane-xsane-color-correction-doc.html  sane-xsane-color-management-doc.html  sane-xsane-copy-doc.html  sane-xsane-doc.html  sane-xsane-email-doc.html  sane-xsane-empty-doc.html  sane-xsane-enhancement-doc.html  sane-xsane-fax-doc.html  sane-xsane-gimp-doc.html  sane-xsane-guide-doc.html  sane-xsane-histogram-doc.html  sane-xsane-mail-doc.html  sane-xsane-main-doc.html  sane-xsane-medium-definition-doc.html  sane-xsane-multipage-doc.html  sane-xsane-output-formats-doc.html  sane-xsane-preview-doc.html  sane-xsane-preview.xpm  sane-xsane-save-doc.html  sane-xsane-scan-doc.html  sane-xsane-scan-options-doc.html  sane-xsane-setup-color-management-doc.html  sane-xsane-setup-copy-doc.html  sane-xsane-setup-device-doc.html  sane-xsane-setup-display-doc.html  sane-xsane-setup-doc.html  sane-xsane-setup-email-doc.html  sane-xsane-setup-enhancement-doc.html  (+12 more)
doc/de/: sane-pnm-doc.html  sane-problems-doc.html  sane-xsane-advanced-doc.html  sane-xsane-doc.html  sane-xsane-gimp-doc.html  sane-xsane-preview-doc.html  sane-xsane-scan-doc.html  sane-xsane-setup-copy-doc.html  sane-xsane-setup-enhancement-doc.html  sane-xsane-setup-fax-doc.html  sane-xsane-standard-doc.html
frontend/: Makefile.in  xsane-back-gtk.c  xsane-back-gtk.h  xsane-device-preferences.c  xsane-device-preferences.h  xsane-front-gtk.c  xsane-front-gtk.h  xsane-gamma.c  xsane-gamma.h  xsane-gtk.c  xsane-gtk.h  xsane-icons-def.h  xsane-icons.c  xsane-icons.h  xsane-preferences.c  xsane-preferences.h  xsane-preview.c  xsane-preview.c.test  xsane-preview.h  xsane-rc-io.c  xsane-rc-io.h  xsane-save.c  xsane-save.h  xsane-scan.c  xsane-scan.h  xsane-setup.c  xsane-setup.h  xsane-text-old.h  xsane-text.h  xsane.c  xsane.h  xsanegtk.c  xsanegtk.h  xsanepreferences.c  xsanepreferences.h  xsanepreview.c
frontend/cursor/: cursor_pipette_gray  cursor_pipette_mask
include/sane/: sanei_signal.h
intl/: Makefile.in
lib/: Makefile.in  snprintf.c
m4/: gettext.m4  gimp-2.0.m4  gimp-orauch.m4  gtk.m4  msnative-struct.m4  sane.m4
po/: Makefile.in  Makefile.in.bak  README  README.ADD_NEW_LANGUAGE  add-0.37.po.in  add-0.38.po.in  add-0.40.po.in  add-0.44.po.in  add-0.47.po.in  ca.po  cs.po  cs.po.in  da.po  de.po  de.po.in  del-0.43.po.in  del-0.44.po.in  del-0.47.po.in  es.po  fi.po  fr.po  fr.po.in  hu.po  it.po  ja.po  make_newlanguage.po.in  newlanguage.po  newlanguage.po.in  newlanguage.po.in.header  newlanguage.po.in.in  nl.po  pa.po  pl.po  po.in2po  pt.po  pt_BR.po  remake_language.po.in  ro.po  ru.po  sane-text.h  (+10 more)
po-UTF-8/: cs.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  ru.po  sl.po  sr.po  sv.po  tr.po  xsane-pot.sed  xsane.pot
po/UTF-8/: Makefile.in  README  cs.po  da.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  vi.po  zh.po
sanei/: Makefile.in
specfiles/fedora-core-1/: xsane.spec
src/: Makefile.in  Makefile.in.WIN32  Mustek-logo.txt  Plustek-logo.txt  Plustek-logo.xpm  UMAX-logo.txt  icc-parasite.c  xsane  xsane-16x16.xpm  xsane-48x48.xpm  xsane-WIN32.txt  xsane-back-gtk.c  xsane-back-gtk.h  xsane-batch-scan.c  xsane-batch-scan.h  xsane-calibration-help.pnm  xsane-calibration.pnm  xsane-calibration.xpm  xsane-device-preferences.c  xsane-device-preferences.h  xsane-email-project.c  xsane-email-project.h  xsane-fax-project.c  xsane-fax-project.h  xsane-fixedtext.h  xsane-front-gtk.c  xsane-front-gtk.h  xsane-gamma.c  xsane-gamma.h  xsane-gimp-1_0-compat.h  xsane-gtk-1_x-compat.h  xsane-icon.rc  xsane-icons.c  xsane-icons.h  xsane-multipage-project.c  xsane-multipage-project.h  xsane-oldgimp.h  xsane-preferences.c  xsane-preferences.h  xsane-preview.c  (+21 more)
src/cursor/: cursor_autoraise_scanarea.xbm  cursor_autoraise_scanarea_mask.xbm  cursor_pipette_black  cursor_pipette_white  cursor_zoom_select.xbm  cursor_zoom_select_mask.xbm
